Added footer and link to github

--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
   </head>
   <body>
     <h1>Welcome to Venezuela</h1>
+
+    <footer>
+      This page was created by Tanya Furst and opensourced on
+      <a href="https://github.com/furstcontact/VenezuelaTravelProject">GitHub</a
+      >.
+    </footer>
   </body>
 </html>
