Added h2 and netlify

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
   </head>
   <body>
     <h1>Welcome to Venezuela</h1>
+    <h2>Lake Maracaibo and Catatumbo Lightening</h2>
 
     <footer>
       This page was created by Tanya Furst and opensourced on
-      <a href="https://github.com/furstcontact/VenezuelaTravelProject">GitHub</a
+      <a
+        href="https://github.com/furstcontact/VenezuelaTravelProject"
+        target="_blank"
+        >GitHub</a
       >.
     </footer>
   </body>
