Added images, added and styled header

--- a/index.html
+++ b/index.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
     <title>Travel Project</title>
   </head>
   <body>
-    <h1>Welcome to Venezuela</h1>
-    <h2>Lake Maracaibo and Catatumbo Lightening</h2>
-
-    <footer>
-      This page was created by Tanya Furst and opensourced on
-      <a
-        href="https://github.com/furstcontact/VenezuelaTravelProject"
-        target="_blank"
-        >GitHub</a
-      >.
-    </footer>
+    <div class="container">
+      <header>
+        <h3>.Travel.</h3>
+        <h1>Welcome to Venezuela</h1>
+        <h2>Lake Maracaibo and Catatumbo Lightning</h2>
+        <a href="#more">Learn More</a>
+      </header>
+      <footer>
+        This page was created by Tanya Furst and opensourced on
+        <a
+          href="https://github.com/furstcontact/VenezuelaTravelProject"
+          target="_blank"
+          >GitHub</a
+        >.
+      </footer>
+    </div>
   </body>
 </html>
