Styled footer and added images

--- a/index.html
+++ b/index.html
@@ -17,13 +17,52 @@
         <h2>Lake Maracaibo and Catatumbo Lightning</h2>
         <a href="#more">Learn More</a>
       </header>
+
       <footer>
-        This page was created by Tanya Furst and opensourced on
-        <a
-          href="https://github.com/furstcontact/VenezuelaTravelProject"
-          target="_blank"
-          >GitHub</a
-        >.
+        <section class="grid">
+          <div>
+            <h3>More About Venezuela</h3>
+            <ul>
+              <li>
+                <a href="www.aeropuerto-maiquetia.com.ve/en" target="_blank"
+                  >Simon Bolívar International Airport</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://www.google.com/maps/place/Venezuela/@6.6728688,-70.6763167,1403935m/data=!3m1!1e3!4m6!3m5!1s0x8c2853cb36cbd801:0xdca0f2587cd54dd3!8m2!3d6.42375!4d-66.58973!16zL20vMDd5bGo?entry=ttu&g_ep=EgoyMDI1MTIwOS4wIKXMDSoKLDEwMDc5MjA3M0gBUAM%3D"
+                  target="_blank"
+                  >Map of Venezuela</a
+                >
+              </li>
+              <li>
+                <a
+                  href="https://cultureroadtravel.com/catatumbo-lightning-the-magnificent-natural-phenomenon-in-venezuela/"
+                  target="_blank"
+                  >Catatumbo Lightning</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About Me</h3>
+            <p>
+              <br />I am a passionate traveler and photographer who loves
+              exploring the world.
+            </p>
+          </div>
+          <div>
+            <h3>About This Website</h3>
+            <p></p>
+            <br />
+            This page was created by Tanya Furst and opensourced on
+            <a
+              href="https://github.com/furstcontact/VenezuelaTravelProject"
+              target="_blank"
+              >GitHub</a
+            >.
+          </div>
+        </section>
       </footer>
     </div>
   </body>
