styled main section and footer and used grids

--- a/index.html
+++ b/index.html
@@ -17,9 +17,45 @@
         <h2>Lake Maracaibo and Catatumbo Lightning</h2>
         <a href="#more">Learn More</a>
       </header>
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img
+              src="images/anglefalls.png"
+              alt="Angel Falls in Venezuela"
+              class="img-responsive"
+            />
+          </div>
+          <div>
+            <h2>Why Visit Venezuela?</h2>
+            <h3>
+              Venezuela is a country known for its astonishing natural diversity
+            </h3>
+            <p>
+              From the world's tallest waterfall (Angel Falls) and unique tepui
+              tabletop mountains in Canaima to pristine Caribbean beaches (Los
+              Roques) and Andean highlands, rich wildlife, vibrant indigenous
+              cultures, and fascinating historyOne of its most spectacular
+              attractions is Lake Maracaibo, which is home to the famous
+              Catatumbo Lightning, a natural phenomenon that occurs almost
+              nightly.
+            </p>
+
+            <p>
+              Venezuelan culture is a vibrant mix of Indigenous, Spanish, and
+              African traditions, known for its warm, family-oriented people,
+              diverse music (like Joropo), delicious food (arepas!), and strong
+              community bonds, though currently facing significant challenges
+              from an ongoing humanitarian crisis. Engage with native
+              communities in the Amazon, Orinoco Delta, and Lake Maracaibo
+              regions.
+            </p>
+          </div>
+        </section>
+      </main>
 
       <footer>
-        <section class="grid">
+        <section class="grid grid-3-columns-with-first-narrow">
           <div>
             <h3>More About Venezuela</h3>
             <ul>
