Made cards and main body section

--- a/index.html
+++ b/index.html
@@ -52,6 +52,74 @@
             </p>
           </div>
         </section>
+        <section class="secondary">
+          <h2 class="text-align">Places to Go</h2>
+          <h3 class="text-align">Drinks, Music, Nightlife</h3>
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img src="images/juanbar.png" alt="" class="img-responsive" />
+              </div>
+              <div class="card-body">
+                <h4>Juan Sebastian Bar</h4>
+                <p>
+                  A well-known spot in El Rosal, praised for its music, drinks,
+                  and atmosphere.
+                </p>
+                <h5>Location: El Rosal</h5>
+                <p>Avenida Venezuela, Caracas 1060, Miranda, Venezuela</p>
+                <a href="https://goo.gl/maps/7Yk1v3oLZ5y" target="_blank"
+                  >Get Directions</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img src="images/laesquina.png" alt="" class="img-responsive" />
+              </div>
+              <div class="card-body">
+                <h4>La Esquina</h4>
+                <p>
+                  La Esquina is a popular spot in Caracas known for its great
+                  music, decoration, and exceptional food.
+                </p>
+                <h5>Location: Caracas</h5>
+                <p>
+                  3era Transversal entre Av. Luis Roche y Av. San Juan Bosco
+                  Hotel VIP, Altamira, Caracas 1060, Miranda, Venezuela
+                </p>
+                <a
+                  href="https://maps.app.goo.gl/sGEQ17LidYgVYFo49"
+                  target="_blank"
+                  >Get Directions</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="images/tributecafe.png"
+                  alt=""
+                  class="img-responsive"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Tributo casa de café</h4>
+                <p>
+                  A revival of Venezuela's rich coffee legacy, positioning the
+                  country as a significant coffee origin.
+                </p>
+                <h5>Location: El Rosal</h5>
+                <p>Avenida Venezuela, Caracas 1060, Miranda, Venezuela</p>
+                <a
+                  href="https://maps.app.goo.gl/wLR3n61T79fJ9uoy8"
+                  target="_blank"
+                  >Get Directions</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer>
