--- a/index.html
+++ b/index.html
@@ -57,8 +57,16 @@
           <h3 class="text-align">Drinks, Music, Nightlife</h3>
           <div class="grid grid-3-columns">
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img src="images/juanbar.png" alt="" class="img-responsive" />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3514.4825174963853!2d-66.864336!3d10.4893697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c2a58fef244aa2f%3A0xeac74c647291bc0d!2sJuan%20Sebastian%20Bar!5e1!3m2!1sen!2sau!4v1766124163756!5m2!1sen!2sau"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Juan Sebastian Bar</h4>
@@ -74,8 +82,16 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img src="images/laesquina.png" alt="" class="img-responsive" />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10835.449440767463!2d-74.0166489128418!3d40.7213987!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25988de53bb89%3A0xc51b279d82f4d5ee!2sLa%20Esquina%20Brasserie!5e1!3m2!1sen!2sau!4v1766125268605!5m2!1sen!2sau"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>La Esquina</h4>
@@ -96,12 +112,20 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header">
+              <div class="card-header grid grid-2-columns">
                 <img
                   src="images/tributecafe.png"
                   alt=""
                   class="img-responsive"
                 />
+                <iframe
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3514.413097692175!2d-66.85909692433071!3d10.49548056291567!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8c2a59c4d3e3941b%3A0x69fd6670a9fd13fc!2sTributo%20casa%20de%20caf%C3%A9%20-%20Chacao!5e1!3m2!1sen!2sau!4v1766125311350!5m2!1sen!2sau"
+                  class="embed"
+                  style="border: 0"
+                  allowfullscreen=""
+                  loading="lazy"
+                  referrerpolicy="no-referrer-when-downgrade"
+                ></iframe>
               </div>
               <div class="card-body">
                 <h4>Tributo casa de café</h4>
