--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             />
           </div>
           <div>
+            <a id="more"></a>
             <h2>Why Visit Venezuela?</h2>
             <h3>
               Venezuela is a country known for its astonishing natural diversity
